fixed some spacing issue in the co-op 1/3 experiences that for some reasons were only showing in live version

--- a/styles.css
+++ b/styles.css
@@ -505,7 +505,7 @@ body {
 .timeline-dates-vertical {
     display: flex;
     flex-direction: column;
-    gap: var(--space-2);
+    gap: var(--space-4);
     margin-bottom: var(--space-2);
 }
 
